[project]
name = "djblue.portal"
version = "0.59.2"
license = { file = "LICENSE" }
readme = "README.md"
description = "A clojure tool to navigate through your data."
authors = [
    { name = "djblue", email = "djblue@users.noreply.github.com" },
]
keywords = [ "clojure", "basilisp", "inspector", "portal", "datafy", "nav" ]
requires-python = ">= 3.8"
dependencies = [
    "aiohttp>=3.11.11",
    "asyncio>=3.4.3",
    "basilisp>=0.4.0",
]

[tool.poetry]
packages = [
    { include = "portal", from = "src" },
]
include = [
    { path = "resources/portal/*", format = [ "sdist", "wheel" ] }
]

[project.urls]
Homepage  = "https://github.com/djblue/portal"
Standalone = "https://djblue.github.io/portal/"
Documentation  = "https://cljdoc.org/d/djblue/portal/"
Issues = "https://github.com/djblue/portal/issues"
Changelog = "https://github.com/djblue/portal/blob/master/CHANGELOG.md"

[build-system]
requires = ["poetry-core==2.1.3"]
build-backend = "poetry.core.masonry.api"